--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,8 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # Build settings
 markdown: kramdown
 #theme: minima
-theme: "ed."
+#theme: "ed."
+remote_theme: "minicomp/ed"
 plugins:
   - jekyll-feed
 
