--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ title: Literary short stories
 email: harry.newton@ed.ac.uk
 description: >- # this means to ignore newlines until "baseurl:"
   Literary short stories with pictures and annotations.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/shortLiteraryStories.github.io" # the subpath of your site, e.g. /blog
+url: "https://jnewton3edinburgh.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 #github_username:  jekyll
 
